--- a/SinhalaTutorial/SinhalaTutorial.csproj
+++ b/SinhalaTutorial/SinhalaTutorial.csproj
@@ -10,4 +10,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SinhalaTutorial.Services\SinhalaTutorial.Services.csproj" />
+    </ItemGroup>
+
 </Project>
