--- a/SinhalaTutorial.Services/SinhalaTutorial.Services.csproj
+++ b/SinhalaTutorial.Services/SinhalaTutorial.Services.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SinhalaTutorial.DataAccess\SinhalaTutorial.DataAccess.csproj" />
       <ProjectReference Include="..\SinhalaTutorial.Models\SinhalaTutorial.Models.csproj" />
     </ItemGroup>
 
